# keysight-33600a-control

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
docs/: COMMAND_COVERAGE.md  GUI_ROADMAP.md  MANUAL_COMMAND_AUDIT.md
docs/vendor_manuals/: .gitignore  README.md
examples/: basic_sine.py  burst_mode.py  gui_smoke.py  launch_gui.py
src/keysight_33600a/: __init__.py  discovery.py  errors.py  gui_app.py  instrument.py  models.py  simulator.py  validation.py
tests/: test_api_surface.py  test_limit_policy.py  test_simulator_backend.py  test_validation.py
