[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keysight-33600a-control"
version = "0.1.0"
description = "Open-source Python control library for Keysight 33600A series waveform generators"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "keysight-33600a-control contributors"}
]
license = {text = "MIT"}
dependencies = [
  "pyvisa>=1.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
